# gamelibs-glad

./: CMakeLists.txt  Makefile  generate.sh  meson.build
include/: vulkan_video_codecs_common.h
include/glad/: egl.h  gl.h  glx.h  vulkan.h  wgl.h
include/vk_video/: vulkan_video_codec_av1std_encode.h  vulkan_video_codec_vp9std.h  vulkan_video_codec_vp9std_decode.h
msvc/: GLAD.vcxproj  GLAD.vcxproj.filters
src/: egl.c  gl.c  glx.c  vulkan.c  wgl.c
